objects/Story__c/fields/Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria__c</fullName>
    <label>Acceptance Criteria</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>