objects/Story__c/fields/Adjusted_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Due_Date__c</fullName>
    <label>Adjusted Due Date</label>
    <type>Date</type>
</CustomField>