objects/Story__c/fields/Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>List the business person who approves the Story to go live</inlineHelpText>
    <label>Approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Stories_Approved</relationshipName>
    <type>Lookup</type>
</CustomField>