objects/Story__c/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <label>Business Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <color>#FF0000</color>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#F3D904</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#33CC00</color>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>