objects/Story__c/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Low</fullName>
                <color>#33CC00</color>
                <label>Very Low</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#66FF99</color>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#F3D904</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#FFCC66</color>
                <label>High</label>
            </value>
            <value>
                <fullName>Very High</fullName>
                <color>#FF0000</color>
                <label>Very High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>