objects/Story__c/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>When was this request originally made?</inlineHelpText>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>