objects/Story__c/fields/Hours_Estimated_Total__c.field-meta.xml
<CustomField>
    <fullName>Hours_Estimated_Total__c</fullName>
    <label>Hours - Estimated Total</label>
    <summarizedField>Development_Task__c.Hours_Estimated__c</summarizedField>
    <summaryForeignKey>Development_Task__c.Story__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>