objects/Story__c/fields/Primary_Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Business Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Stories</relationshipLabel>
    <relationshipName>Stories</relationshipName>
    <type>Lookup</type>
</CustomField>