objects/Story__c/fields/Priority_Formula_2__c.field-meta.xml
<CustomField>
    <fullName>Priority_Formula_2__c</fullName>
    <formula>TEXT(Business_Value__c)  &amp; &quot; Business Value, &quot; &amp; TEXT(Complexity__c) &amp; &quot; Complexity&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Formula 2</label>
    <type>Text</type>
</CustomField>