objects/Story__c/fields/Story_Summary__c.field-meta.xml
<CustomField>
    <fullName>Story_Summary__c</fullName>
    <label>Story Summary</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>