objects/Story__c/fields/Story_Type__c.field-meta.xml
<CustomField>
    <fullName>Story_Type__c</fullName>
    <label>Story Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System Enhancement</fullName>
                <default>true</default>
                <label>System Enhancement</label>
            </value>
            <value>
                <fullName>Process Enhancement</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Impediment</fullName>
            </value>
            <value>
                <fullName>Training &amp; Documentation</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Product Launch/Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>