objects/Story__c/validationRules/Date_Requested_Is_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Requested_Is_Future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Requested__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Requested__c</errorDisplayField>
    <errorMessage>The Date Requested field cannot be a future date. Date Requested is a record of when the original request was made. You may be looking for the Requested Deadline field.</errorMessage>
</ValidationRule>