objects/Story__c/validationRules/Status_is_approved_or_above_no_sprint.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_is_approved_or_above_no_sprint</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISPICKVAL (Status__c, &quot;Requested&quot;)) &amp;&amp; 
NOT( ISPICKVAL (Status__c, &quot;Cancelled&quot;)) &amp;&amp; 
ISBLANK( Sprint__c )</errorConditionFormula>
    <errorDisplayField>Sprint__c</errorDisplayField>
    <errorMessage>Please select a sprint</errorMessage>
</ValidationRule>