objects/Story__c/validationRules/Story_Complete_and_Design_Approach_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Story_Complete_and_Design_Approach_blank</fullName>
    <active>true</active>
    <errorConditionFormula>Design_Approach__c = &quot;&quot; &amp;&amp;  
ISPICKVAL(Status__c, &quot;Completed&quot;) &amp;&amp;
NOT(ISPICKVAL(Story_Type__c, &quot;Deployment&quot;))</errorConditionFormula>
    <errorDisplayField>Design_Approach__c</errorDisplayField>
    <errorMessage>Please fill out the Design Approach field before marking this Story as Complete</errorMessage>
</ValidationRule>