objects/Story__c/listViews/Business_Enablement_Product_Priorities.listView-meta.xml
<ListView>
    <fullName>Business_Enablement_Product_Priorities</fullName>
    <columns>Story_Summary__c</columns>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Sprint__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Business_Value__c</columns>
    <columns>Primary_Business_Contact__c</columns>
    <columns>Epic__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Story_Type__c</field>
        <operation>contains</operation>
        <value>Product Launch/Enhancement</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft,Requested,Approved,Committed,Testable,Ready to Deploy,Blocked</value>
    </filters>
    <label>Business Enablement Product Priorities</label>
</ListView>